First working fpd_45_50. An fpd with capacity 45, and quot range of size 50. This version on fpd total size is 512 bit, so hopefully it requires a single cache miss. Currently too slow. 35-25 MOPS for random searches.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,17 +71,17 @@ set(PROJECT_SOURCES
     PD_Filter/Dict320/pd320.cpp
     PD_Filter/Dict320/pd256_plus.hpp
     PD_Filter/Dict320/pd256_plus.cpp
-    PD_Filter/Dict320/Dict320.hpp
-    PD_Filter/Dict320/Dict256_Ver4.hpp
-    PD_Filter/Dict320/Dict320_v2.hpp
-    PD_Filter/Dict320/twoChoicer320.hpp
+        PD_Filter/Dict320/Dict320.hpp
+        PD_Filter/Dict320/Dict256_Ver4.hpp
+        PD_Filter/Dict320/Dict320_v2.hpp
+        PD_Filter/Dict320/twoChoicer320.hpp
 
-    PD_Filter/basic_function_util.h PD_Filter/basic_function_util.cpp
+        PD_Filter/basic_function_util.h PD_Filter/basic_function_util.cpp
 
-    PD_Filter/Fixed_PD/fpd.hpp PD_Filter/Fixed_PD/fpd.cpp
-    PD_Filter/Fixed_PD/wrap_fpd.hpp PD_Filter/Fixed_PD/wrap_fpd.cpp
-    PD_Filter/Fixed_PD/Fixed_Dict.hpp
-)
+        PD_Filter/Fixed_PD/fpd.hpp PD_Filter/Fixed_PD/fpd.cpp
+        PD_Filter/Fixed_PD/wrap_fpd.hpp PD_Filter/Fixed_PD/wrap_fpd.cpp
+        PD_Filter/Fixed_PD/Fixed_Dict.hpp
+        PD_Filter/Fixed_PD/fixed_pd_45.cpp PD_Filter/Fixed_PD/fixed_pd_45.hpp PD_Filter/Fixed_PD/Fixed_Dict_Ver2.hpp)
 
 add_executable(Filters main.cpp ${PROJECT_SOURCES})
 # Add the compile options ONLY for Filters.
@@ -186,4 +186,4 @@ target_link_libraries(profiling OpenSSL::SSL)
 #   # Safe/Constant_size_PD
 # )
 
-target_link_libraries(Filters OpenSSL::SSL)
+#target_link_libraries(Filters OpenSSL::SSL)
