Adding packed_spare. This class stores each element using 14.666 bits. Ver6 uses this class as spare. This is still work in progress.

--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,6 @@ temp.txt
 
 l1_minimal_search_v25.txt
 cmake-build-debug
+PD_Filter/Dict512/Comparing-searches.txtcmake-build-debug-coverage/
+cmake-build-debug-coverage
 PD_Filter/Dict512/Comparing-searches.txt
