First working "packed spare" which is a second level that allows performing deletions using the new pd_plus algorithm. Currently slow due to many validation test that take place inside each function.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,74 +37,81 @@ include_directories(cuckoofilter)
 find_package(OpenSSL REQUIRED)
 
 set(PROJECT_SOURCES
-    # main.cpp
-    hashutil.h
-    Tests/wrappers.hpp
-    Tests/tests.hpp
-    Tests/tests.cpp
-    Tests/new_tests.hpp
-    Tests/new_tests.cpp
-    Tests/printutil.cpp
-    Tests/printutil.hpp
-    PD_Filter/macros.h
-    Hash_functions/xxhash64.h
-    Hash_functions/wyhash.h
-    Hash_functions/woothash.h
-    Hash_functions/MurmurHash3.h
-    Hash_functions/MurmurHash3.cpp
-    Hash_functions/BobJenkins.h
-    Hash_functions/BobJenkins.cpp
-    # PD_Filter/HashTables/hashTable64.hpp
-    PD_Filter/HashTables/hashTable_Aligned.hpp
-    PD_Filter/HashTables/hashTable_Packed.hpp
-    PD_Filter/HashTables/hashTable_BatchPacking.hpp
-    PD_Filter/HashTables/hashTable_CuckooFilter.hpp
-    PD_Filter/HashTables/Spare_Low_Load.hpp
-    PD_Filter/HashTables/packed_spare.hpp
+        # main.cpp
+        hashutil.h
+        Tests/wrappers.hpp
+        Tests/tests.hpp
+        Tests/tests.cpp
+        Tests/new_tests.hpp
+        Tests/new_tests.cpp
+        Tests/printutil.cpp
+        Tests/printutil.hpp
+        PD_Filter/macros.h
+        Hash_functions/xxhash64.h
+        Hash_functions/wyhash.h
+        Hash_functions/woothash.h
+        Hash_functions/MurmurHash3.h
+        Hash_functions/MurmurHash3.cpp
+        Hash_functions/BobJenkins.h
+        Hash_functions/BobJenkins.cpp
+        # PD_Filter/HashTables/hashTable64.hpp
+        PD_Filter/HashTables/hashTable_Aligned.hpp
+        PD_Filter/HashTables/hashTable_Packed.hpp
+        PD_Filter/HashTables/hashTable_BatchPacking.hpp
+        PD_Filter/HashTables/hashTable_CuckooFilter.hpp
+        PD_Filter/HashTables/Spare_Low_Load.hpp
+        PD_Filter/HashTables/Spare_Validator.hpp
+        PD_Filter/HashTables/packed_spare.hpp
+        PD_Filter/HashTables/HistoryLog.hpp PD_Filter/HashTables/HistoryLog.cpp
 
-    PD_Filter/Dict512/pd512.hpp
-    PD_Filter/Dict512/pd512.cpp
-    PD_Filter/Dict512/pd512_plus.hpp
-    PD_Filter/Dict512/pd512_plus.cpp
-    PD_Filter/Dict512/Dict512.hpp
-    PD_Filter/Dict512/twoChoicer.hpp
-    PD_Filter/Dict512/Dict512_With_CF.hpp
-    PD_Filter/Dict512/Dict512_SparseSpare.hpp
-    PD_Filter/Dict512/Dict512_Ver2.hpp
-    # PD_Filter/Dict512/Dict512_Ver3.hpp
-    PD_Filter/Dict512/Dict512_Ver4.hpp
+        PD_Filter/HashTables/HashTables_Tests/validate_hash_table.hpp PD_Filter/HashTables/HashTables_Tests/validate_hash_table.cpp
 
-    PD_Filter/Dict320/pd320.hpp
-    PD_Filter/Dict320/pd320.cpp
-    PD_Filter/Dict320/pd256.hpp
-    PD_Filter/Dict320/pd256.cpp
-    PD_Filter/Dict320/pd256_plus.hpp
-    PD_Filter/Dict320/pd256_plus.cpp
-    PD_Filter/Dict320/Dict320.hpp
-    PD_Filter/Dict320/Dict256_Ver4.hpp
-    PD_Filter/Dict320/Dict256_Ver5.hpp
-    PD_Filter/Dict320/Dict256_Ver6.hpp
-    PD_Filter/Dict320/Dict320_v2.hpp
-    PD_Filter/Dict320/twoChoicer320.hpp
-    PD_Filter/Dict320/twoChoicer256.hpp
-    
-    PD_Filter/basic_function_util.h
-    PD_Filter/basic_function_util.cpp
-    
-    PD_Filter/Fixed_PD/fpd.hpp
-    PD_Filter/Fixed_PD/fpd.cpp
-    PD_Filter/Fixed_PD/wrap_fpd.hpp
-    PD_Filter/Fixed_PD/wrap_fpd.cpp
-    PD_Filter/Fixed_PD/Fixed_Dict.hpp
-    PD_Filter/Fixed_PD/fixed_pd_45.cpp
-    PD_Filter/Fixed_PD/fixed_pd_45.hpp
-    PD_Filter/Fixed_PD/Fixed_Dict_Ver2.hpp
-    
-#    PD_Filter/L2_pd/tpd.hpp
-#    PD_Filter/L2_pd/tpd.cpp
+
+        PD_Filter/Dict512/pd512.hpp
+        PD_Filter/Dict512/pd512.cpp
+        PD_Filter/Dict512/pd512_plus.hpp
+        PD_Filter/Dict512/pd512_plus.cpp
+        PD_Filter/Dict512/Dict512.hpp
+        PD_Filter/Dict512/twoChoicer.hpp
+        PD_Filter/Dict512/Dict512_With_CF.hpp
+        PD_Filter/Dict512/Dict512_SparseSpare.hpp
+        PD_Filter/Dict512/Dict512_Ver2.hpp
+        # PD_Filter/Dict512/Dict512_Ver3.hpp
+        PD_Filter/Dict512/Dict512_Ver4.hpp
+
+        PD_Filter/Dict320/pd320.hpp
+        PD_Filter/Dict320/pd320.cpp
+        PD_Filter/Dict320/pd256.hpp
+        PD_Filter/Dict320/pd256.cpp
+        PD_Filter/Dict320/pd256_plus.hpp
+        PD_Filter/Dict320/pd256_plus.cpp
+        PD_Filter/Dict320/Dict320.hpp
+        PD_Filter/Dict320/Dict256_Ver4.hpp
+        PD_Filter/Dict320/Dict256_Ver5.hpp
+        PD_Filter/Dict320/Dict256_Ver6.hpp
+        PD_Filter/Dict320/Dict256_Ver6_DB.hpp
+        PD_Filter/Dict320/Dict256_Ver7.hpp
+        PD_Filter/Dict320/Dict320_v2.hpp
+        PD_Filter/Dict320/twoChoicer320.hpp
+        PD_Filter/Dict320/twoChoicer256.hpp
+
+        PD_Filter/basic_function_util.h
+        PD_Filter/basic_function_util.cpp
+
+        PD_Filter/Fixed_PD/fpd.hpp
+        PD_Filter/Fixed_PD/fpd.cpp
+        PD_Filter/Fixed_PD/wrap_fpd.hpp
+        PD_Filter/Fixed_PD/wrap_fpd.cpp
+        PD_Filter/Fixed_PD/Fixed_Dict.hpp
+        PD_Filter/Fixed_PD/fixed_pd_45.cpp
+        PD_Filter/Fixed_PD/fixed_pd_45.hpp
+        PD_Filter/Fixed_PD/Fixed_Dict_Ver2.hpp
+
+        #    PD_Filter/L2_pd/tpd.hpp
+        #    PD_Filter/L2_pd/tpd.cpp
         PD_Filter/L2_pd/twoDimPD.hpp PD_Filter/L2_pd/twoDimPD.cpp
-    
-    )
+
+        )
 
 add_executable(Filters main.cpp ${PROJECT_SOURCES})
 # Add the compile options ONLY for Filters.
@@ -130,7 +137,16 @@ add_executable(profiling main.cpp ${PROJECT_SOURCES})
 # Add the compile options ONLY for valid_test.
 target_compile_options(profiling PRIVATE -O3 -DNDEBUG -DPROF)
 
-add_executable(temp PD_Filter/L2_pd/twoDimPD.hpp PD_Filter/L2_pd/twoDimPD.cpp PD_Filter/L2_pd/temp_main.cpp)
+add_executable(temp
+        PD_Filter/HashTables/packed_spare.hpp
+        PD_Filter/HashTables/HistoryLog.hpp PD_Filter/HashTables/HistoryLog.cpp
+        PD_Filter/L2_pd/twoDimPD.hpp PD_Filter/L2_pd/twoDimPD.cpp
+#        PD_Filter/L2_pd/temp_main.cpp
+        PD_Filter/HashTables/HashTables_Tests/validate_hash_table.hpp
+        PD_Filter/HashTables/HashTables_Tests/validate_hash_table.cpp
+        PD_Filter/HashTables/HashTables_Tests/Hashtable_main.cpp
+#        PD_Filter/HashTables/HashTables_Tests/old_main.cpp
+        )
 # Add the compile options ONLY for valid_test.
 # target_compile_options(temp PRIVATE -O0 -g)
 target_compile_options(temp PRIVATE -O0 -g3 -Wall -Wextra -W) #  -fstack-clash-protection -fstack-protector)
